fixed css layout issues

--- a/public/sass/partials/_home.sass
+++ b/public/sass/partials/_home.sass
@@ -16,8 +16,7 @@
 
 
 .below-fold
-  margin-top: 300px
-  position: absolute
+  margin-top: 150px
   z-index: 1000
 
 
